--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        //FIXME the version of R8 coming with gradle plugin 4.0.0 causes serious problems
-        //noinspection GradleDependency
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:3.5.3'
     }
 }
 
@@ -16,8 +14,8 @@ allprojects {
         appName = 'Shattered Pixel Dungeon'
         appPackageName = 'com.shatteredpixel.shatteredpixeldungeon'
 
-        appVersionCode = 422
-        appVersionName = '0.8.1a'
+        appVersionCode = 382
+        appVersionName = '0.1'
 
         appJavaCompatibility = JavaVersion.VERSION_1_8
 
