--- a/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/misc/misc.properties
+++ b/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/misc/misc.properties
@@ -84,4 +84,17 @@ challenges.darkness_desc=It is a dungeon after all!\n\n- Regular visible distanc
 challenges.no_scrolls=Forbidden runes
 challenges.no_scrolls_desc=A certain rune is harder to find. Unfortunately, it's always the most useful one.\n\n- Half of the dungeon's upgrades scrolls are removed
 
+learnersoptions.wor_buff=Regrowth Buff
+learnersoptions.wor_buff_desc=The Wand of Regrowth no longer degrades!\n\nJust like the old days!
+learnersoptions.save_every_depth=Save Every Depth
+learnersoptions.save_every_depth_desc=The game saves at the beginning of every new level. You can only reload the most recent save.
+learnersoptions.save_before_boss=Save Before Boss
+learnersoptions.save_before_boss_desc=The game saves before every boss battle. You can only reload the most recent save.
+learnersoptions.save_after_boss=Save After Boss
+learnersoptions.save_after_boss_desc=The game saves after every boss battle ends. You can only reload the most recent save.
+learnersoptions.save_all=Save All
+learnersoptions.save_all_desc=The game saves at the beginning of every level and before and after every boss battle. You can only reload the most recent save.
+learnersoptions.more_hp_and_food=More HP & Food
+learnersoptions.more_hp_and_food_desc=Health potions and food both spawn about 50% more often. Hopefully with these distractions out of the way, you can focus more on learning the game!
+
 rankings$record.something=Killed by Something
