--- a/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/windows/windows.properties
+++ b/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/windows/windows.properties
@@ -3,6 +3,7 @@ windows.wndblacksmith.select=Reforge an item
 windows.wndblacksmith.reforge=Reforge them
 
 windows.wndchallenges.title=Challenges
+windows.wndlearnersoptions.title=Learner's Options
 
 windows.wndchooseway.message=Which way will you follow?
 windows.wndchooseway.cancel=I'll decide later
