--- a/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/windows/windows.properties
+++ b/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/windows/windows.properties
@@ -22,6 +22,9 @@ windows.wndgame.menu=Main Menu
 windows.wndgame.exit=Exit Game
 windows.wndgame.return=Return to Game
 
+windows.wndreload.reload=Reload
+windows.wndreload.die=Embrace Death
+
 windows.wndgameinprogress.title=Level %1$d %2$s
 windows.wndgameinprogress.challenges=Challenges
 windows.wndgameinprogress.exp=Experience
