--- a/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/misc/misc.properties
+++ b/core/src/main/resources/com/shatteredpixel/shatteredpixeldungeon/messages/misc/misc.properties
@@ -95,6 +95,6 @@ learnersoptions.save_after_boss_desc=The game saves after every boss battle ends
 learnersoptions.save_all=Save All
 learnersoptions.save_all_desc=The game saves at the beginning of every level and before and after every boss battle. You can only reload the most recent save.
 learnersoptions.more_hp_and_food=More HP & Food
-learnersoptions.more_hp_and_food_desc=Health potions and food both spawn about 50% more often. Hopefully with these distractions out of the way, you can focus more on learning the game!
+learnersoptions.more_hp_and_food_desc=50% of the time, an extra food item and health potion spawn, though not always at the same time.
 
 rankings$record.something=Killed by Something
