--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ android {
     sourceSets.main.assets.srcDirs = [new File(project(':core').projectDir, "/src/main/assets")]
 
     defaultConfig {
+        applicationId "com.thomasokeeffe.learnerspixeldungeon"
         manifestPlaceholders = [appName:appName]
         applicationId appPackageName
 
