--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.android.tools.build:gradle:4.0.1'
     }
 }
 
@@ -12,7 +12,7 @@ allprojects {
 
     ext {
         appName = 'Learner\'s Pixel Dungeon'
-        appPackageName = 'com.shatteredpixel.shatteredpixeldungeon'
+        appPackageName = 'com.thomasokeeffe.learnerspixeldungeon'
 
         appVersionCode = 382
         appVersionName = '0.1'
